--- a/www/css/index.css
+++ b/www/css/index.css
@@ -4,9 +4,15 @@
 
 body {
     background-color: #936400;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     color: #f7f7f7;
-    font-size: 12pt;
+}
+
+a {
+    color: #f7f7f7;
+}
+
+a:hover {
+    color: #f7f7f7;
 }
 
 .container {
@@ -26,7 +32,6 @@ body {
 
 .circle-btn {
     display: block;
-    background-color: #ffffff;
     width: 70px;
     height: 70px;
     border-radius: 35px;
@@ -34,32 +39,4 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
-}
-
-.crown-chakra {
-    background-color: #cc7dff;
-}
-
-.temple-chakra {
-    background-color: #8091ff;
-}
-
-.throat-chakra {
-    background-color: #80dedf;
-}
-
-.heart-chakra {
-    background-color: #80ff97;
-}
-
-.solar-plexus-chakra {
-    background-color: #fffa80;
-}
-
-.sacral-chakra {
-    background-color: #8091ff;
-}
-
-.root-chakra {
-    background-color: #ff8080;
 }
