--- a/www/css/index.css
+++ b/www/css/index.css
@@ -21,7 +21,7 @@ a:hover {
 
 .headline {
     font-size: 36pt;
-    font-weight: normal;
+    font-weight: lighter;
     line-height: 1.2em;
 }
 
@@ -31,12 +31,52 @@ a:hover {
 }
 
 .circle-btn {
-    display: block;
+    display: inline-block;
     width: 70px;
     height: 70px;
     border-radius: 35px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
+    vertical-align: top;
+    margin-left: 15px;
 }
+
+.mood-listing {
+    margin-top: 20px;
+}
+
+.mood-listing span {
+    display: inline-block;
+    padding-top: 0px;
+    margin-left: 20px;
+    vertical-align: middle;
+    font-size: 32pt;
+    font-weight: lighter;
+}
+
+.crown-chakra-circle {
+    border: 1px solid #cc7dff;
+}
+
+.temple-chakra-circle {
+    border: 1px solid #8091ff;
+}
+
+.throat-chakra-circle {
+    border: 1px solid #80dedf;
+}
+
+.heart-chakra-circle {
+    border: 1px solid #80ff97;
+}
+
+.solar-plexus-chakra-circle {
+    border: 1px solid #fffa80;
+}
+
+.sacral-chakra-circle {
+    border: 1px solid #8091ff;
+}
+
+.root-chakra-circle {
+    border: 1px solid #ff8080;
+}
+
