Add list of yoga styles and descriptions

--- a/www/css/global.less
+++ b/www/css/global.less
@@ -5,6 +5,7 @@
 body {
     font-family: 'Roboto', 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size: 12pt;
+    background-color: #f7f7f7;
 }
 
 a {
