--- a/www/css/classes.less
+++ b/www/css/classes.less
@@ -2,14 +2,21 @@
   .title-bar {
     margin-top: 0;
     padding: 10px 40px;
+
+    h1 {
+      margin-top: 10px;
+      font-size: 28pt;
+      line-height: 1.2em;
+      font-weight: lighter;
+    }
+
+    select {
+      display: inline;
+      width: inherit;
+    }
   }
 
-  .title-bar h1 {
-    margin-top: 10px;
-    font-size: 28pt;
-    line-height: 1.2em;
-      font-weight: lighter;
-  }
+
 
   .class-listing {
     padding: 20px 40px;
